# valveprotos-rs

./: Cargo.toml  build.rs  lib.rs  patch.proto  readme.md
.github/workflows/: update-protos.yml
protos/common/: demo.proto  gameevents.proto  netmessages.proto  networkbasetypes.proto  source2_steam_stats.proto  usermessages.proto
protos/deadlock/: citadel_gameevents.proto  citadel_gamemessages.proto  citadel_gcmessages_client.proto  citadel_gcmessages_common.proto  citadel_usercmd.proto  citadel_usermessages.proto
protos/gcsdk/: steammessages.proto  valveextensions.proto
scripts/: fetch-protos.rs  graph-imports.rs
